# alita_demo

./: .flake8  .gitignore  README.md  README.md.bk  docker-compose.yml  env.sh  format-and-lint.sh  pyproject.toml
alita_mini/: config.py  custom_types.py  exceptions.py  log.py  utils.py
alita_mini/adapter/: mongo_client.py  redis_client.py
alita_mini/application/: REAEME.md  main.py  templates.py
alita_mini/crawler/: main.py  pdf_text.py
alita_mini/data/: data_config.py  data_utils.py  main.py
alita_mini/kg/: 业绩原因分析.xlsx  工作簿2.xlsx  投资的原则.xlsx
alita_mini/llm/: openai_utils.py
alita_mini/reasoner/: reasoner_config.py
corpus/: 2023-07-15-业绩预增.xlsx
docs/: .$alita_mini_demo.drawio.bkp  .$alita_mini_demo.drawio.dtmp  alita_mini_demo.drawio
etc/dev/: .env_new
notebook/: data.txt  expert_notes.txt  information_process.ipynb  kg_meta.txt  kg_meta_2.txt  kg_meta_3.txt  kg_meta_case.txt  kg_process.ipynb  kg_un_formal_process.ipynb  report_data_info.txt  test_gpt4.ipynb  test_gpt4.txt  test_mongo.py  test_open_ai.py
notebook/kg/: kg_company_core.txt  kg_company_core_merge.txt  kg_danger.txt  kg_danger_merge.txt  kg_index.txt  kg_industry_ana.txt  kg_industry_ana_merge.txt  kg_key_danger.txt  kg_key_danger_merge.txt  kg_operation.txt  kg_operation_merge.txt
notebook/kg_un_formal/: kg_company_core.txt  kg_company_core_merge.txt  kg_danger.txt  kg_industry_ana.txt  kg_industry_ana_merge.txt  kg_key_danger.txt  kg_operation.txt
scripts/: build_index.sh  connect_db.sh  craw_data.sh  docker_down.sh  docker_up.sh  summarize_reason.sh
tests/: test_math.py
(+43 files in other folders)
